fixed padding issue for jump to top buttons on mobile

--- a/style.css
+++ b/style.css
@@ -378,5 +378,6 @@ p {
   }
   #navbutton {
     font-size: 0%;
+	padding: 0px;
   }
 }
